<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">infirmaryhelper</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="TextView1">縣市</string>
    <string name="TextView2">鄉鎮市區</string>
    <string name="TextView3">科別</string>
    <string name="sumit">搜尋</string>
    <string name="cancel">重設</string>
    <string name="title_activity_activity_menu">Activity_menu</string>
    <string name="title_activity_activity_sqlite">ActivitySQLite</string>
    <string name="title_activity_db_constants">DbConstants</string>

</resources>